VR: Remove dependence of gesture detector on TimeTicks::Now

The gesture detector extrapolates scrolling events from previous real scrolling events.
The extrapolated event depends on the time difference between the events, favoring the
longest and more recent event. Here, we make the gesture detector receive the current
time instead of querying it from the system, and thus making the tests deterministic.

Bug: 853086
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:linux_vr;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I2d46f5e5ebceb801aecccf5b2c0a2dbf6b858864
Reviewed-on: https://chromium-review.googlesource.com/1104583
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Reviewed-by: Amirhossein Simjour <asimjour@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568043}