chrome/browser/vr/gesture_detector.h
@@ -39,6 +39,7 @@ class VR_EXPORT GestureDetector {
   virtual ~GestureDetector();
 
   std::unique_ptr<GestureList> DetectGestures(const TouchInfo& touch_info,
+                                              base::TimeTicks current_timestamp,
                                               bool force_cancel);
 
  private:
@@ -82,7 +83,8 @@ class VR_EXPORT GestureDetector {
   // before, update the touch point and return true. Otherwise, return false.
   bool UpdateCurrentTouchPoint(const TouchInfo& touch_info);
 
-  void ExtrapolateTouchInfo(TouchInfo* touch_info);
+  void ExtrapolateTouchInfo(TouchInfo* touch_info,
+                            base::TimeTicks current_timestamp);
 
   void UpdateOverallVelocity(const TouchInfo& touch_info);
 
