chrome/browser/vr/gesture_detector_unittest.cc
@@ -19,7 +19,7 @@ TEST(GestureDetector, NotTouching) {
 
   TouchInfo touch_info{
       .touch_up = false, .touch_down = false, .is_touching = false};
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, base::TimeTicks(), false);
   EXPECT_TRUE(gestures->empty());
 }
 
@@ -34,7 +34,7 @@ TEST(GestureDetector, StartTouchWithoutMoving) {
       .touch_down = true,
       .is_touching = true,
   };
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureFlingCancel);
 
@@ -46,7 +46,7 @@ TEST(GestureDetector, StartTouchWithoutMoving) {
       .touch_down = true,
       .is_touching = true,
   };
-  gestures = detector.DetectGestures(touch_info, false);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_TRUE(gestures->empty());
 }
 
@@ -60,7 +60,7 @@ TEST(GestureDetector, StartTouchMoveAndRelease) {
       .touch_down = true,
       .is_touching = true,
   };
-  detector.DetectGestures(touch_info, false);
+  detector.DetectGestures(touch_info, timestamp, false);
 
   // Move to the right.
   timestamp += base::TimeDelta::FromMilliseconds(1);
@@ -70,7 +70,7 @@ TEST(GestureDetector, StartTouchMoveAndRelease) {
       .touch_down = false,
       .is_touching = true,
   };
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollBegin);
   auto* gesture = gestures->front().get();
@@ -85,7 +85,7 @@ TEST(GestureDetector, StartTouchMoveAndRelease) {
       .touch_down = false,
       .is_touching = true,
   };
-  gestures = detector.DetectGestures(touch_info, false);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollUpdate);
   gesture = gestures->front().get();
@@ -95,17 +95,20 @@ TEST(GestureDetector, StartTouchMoveAndRelease) {
   // Release touch. Scroll is extrapolated for 2 frames.
   touch_info.touch_up = true;
   touch_info.is_touching = false;
-  gestures = detector.DetectGestures(touch_info, false);
+  timestamp += base::TimeDelta::FromMilliseconds(1);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollUpdate);
   gesture = gestures->front().get();
   EXPECT_GT(gesture->data.scroll_update.delta_x, 0.0f);
   EXPECT_GT(gesture->data.scroll_update.delta_y, 0.0f);
   touch_info.touch_up = false;
-  gestures = detector.DetectGestures(touch_info, false);
+  timestamp += base::TimeDelta::FromMilliseconds(1);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollUpdate);
-  gestures = detector.DetectGestures(touch_info, false);
+  timestamp += base::TimeDelta::FromMilliseconds(1);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollEnd);
 }
@@ -120,7 +123,7 @@ TEST(GestureDetector, CancelDuringScrolling) {
       .touch_down = true,
       .is_touching = true,
   };
-  detector.DetectGestures(touch_info, false);
+  detector.DetectGestures(touch_info, timestamp, false);
 
   // Move to the right.
   timestamp += base::TimeDelta::FromMilliseconds(1);
@@ -130,12 +133,12 @@ TEST(GestureDetector, CancelDuringScrolling) {
       .touch_down = false,
       .is_touching = true,
   };
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollBegin);
 
   // Cancel.
-  gestures = detector.DetectGestures(touch_info, true);
+  gestures = detector.DetectGestures(touch_info, timestamp, true);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollEnd);
 }
@@ -150,7 +153,7 @@ TEST(GestureDetector, CancelDuringPostScrolling) {
       .touch_down = true,
       .is_touching = true,
   };
-  detector.DetectGestures(touch_info, false);
+  detector.DetectGestures(touch_info, timestamp, false);
 
   // Move to the right.
   timestamp += base::TimeDelta::FromMilliseconds(1);
@@ -160,20 +163,20 @@ TEST(GestureDetector, CancelDuringPostScrolling) {
       .touch_down = false,
       .is_touching = true,
   };
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollBegin);
 
   // Release touch. We should see extrapolated scrolling.
   touch_info.touch_up = true;
   touch_info.is_touching = false;
-  gestures = detector.DetectGestures(touch_info, false);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollUpdate);
 
   // Cancel.
   touch_info.touch_up = false;
-  gestures = detector.DetectGestures(touch_info, true);
+  gestures = detector.DetectGestures(touch_info, timestamp, true);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollEnd);
 }
@@ -188,7 +191,7 @@ TEST(GestureDetector, CancelAndTouchDuringPostScrolling) {
       .touch_down = true,
       .is_touching = true,
   };
-  detector.DetectGestures(touch_info, false);
+  detector.DetectGestures(touch_info, timestamp, false);
 
   // Move to the right.
   timestamp += base::TimeDelta::FromMilliseconds(1);
@@ -198,22 +201,24 @@ TEST(GestureDetector, CancelAndTouchDuringPostScrolling) {
       .touch_down = false,
       .is_touching = true,
   };
-  auto gestures = detector.DetectGestures(touch_info, false);
+  auto gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollBegin);
 
   // Release touch. We should see extrapolated scrolling.
+  timestamp += base::TimeDelta::FromMilliseconds(1);
   touch_info.touch_up = true;
   touch_info.is_touching = false;
-  gestures = detector.DetectGestures(touch_info, false);
+  gestures = detector.DetectGestures(touch_info, timestamp, false);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollUpdate);
 
   // Cancel and touch.
+  timestamp += base::TimeDelta::FromMilliseconds(1);
   touch_info.touch_up = false;
   touch_info.touch_down = true;
   touch_info.is_touching = true;
-  gestures = detector.DetectGestures(touch_info, true);
+  gestures = detector.DetectGestures(touch_info, timestamp, true);
   EXPECT_EQ(gestures->front()->GetType(),
             blink::WebInputEvent::kGestureScrollEnd);
 }
